3) Cleared smarty cache of settings page in case the user upgraded from older versions

2012-03-11
----
1) Added bottom line in product page, and let the shop owner an option to decide where he wants to place it.
2) Removed usless files in the oauth library, and rename files in this library with Yotpo + file name, to avoid collisions in case some other extension allready loaded these files.

2012-03-18
----
1) Remove validation of ssl cartificate in yotpo oauth-lib to prevent exceptions in case server cartificates are not updated.

2012-05-01
----
1) Add check box to the settings screen which choose the widget language accourding to the current shopper language.
2) Remove the select box for the languages selection and put text field insted which will hold the language code.

2012-05-02
----
1) Cache bug, settings page wasn't updated after upgrading, This happens only in some versions.

2012-07-09
----
1) Add language support to custom testimonials tab.

2012-07-15
----
1) Add support in rich snippets.

2012-07-15
----
1) Add update cache method and update row in case it's invalid. 

2012-07-17
----
1) Disable submit past orders button in case there are no app key or secret token.

2012-07-21
----
1) Add variable to db to check whether the snippet cache was already created. this is useful when a user upgrade from an older version.  

2012-08-08
----
1) Increase language code to 5 letters code.
    
2012-09-03
----
1) Fixed bug: when trying to get the product url. 

2012-11-21
----

1) Load yQuery asynchronously

2014-01-09
----
1) Added b2c2b registarion support.


2014-02-17
----
1) Add option to choose status which will trigger the MAP.    

2014-02-17
----
1) Change module according to new prestashop code validator.  

2014-04-01
----
1) Bug fix in reviews tab for some of the versions.

2014-05-20
----
1) Ensure app key exist before loading any front end hook.
   
2014-07-15
----
1) Update plugin to show widget V2.  