@@ -1,0 +1,5 @@
+{if $yotpoVersionPost16}
+    <h3 class="page-product-heading"><a href="#idTab-yotpo">{$yotpoWidgetTabName|escape:'html':'UTF-8'}</a></h3>
+{else}
+    <li><a href="#idTab-yotpo">{$yotpoWidgetTabName|escape:'html':'UTF-8'}</a></li>
+{/if}
