@@ -1,0 +1,3 @@
+<div id="idTab-yotpo">
+	{include file="$yotpoContentTplPath"}	
+</div>
