@@ -23,7 +23,7 @@ class Yotpo extends Module
 		$version_test = $version_mask[0] > 0 && $version_mask[1] > 4;
 		$this->name = 'yotpo';
 		$this->tab = $version_test ? 'advertising_marketing' : 'Reviews';
-		$this->version = '1.4.2';
+		$this->version = '1.4.3';
 		if ($version_test)
 			$this->author = 'Yotpo';
 		$this->need_instance = 1;
@@ -34,7 +34,7 @@ class Yotpo extends Module
 		$this->description = $this->l('The #1 reviews add-on for SMBs. Generate beautiful, trusted reviews for your shop.');
 
 		$this->_yotpo_module_path = _PS_MODULE_DIR_.$this->name;
-
+		$this->db_version = '1.1';
 		if (!Configuration::get('yotpo_app_key'))
 			$this->warning = $this->l('Set your API key in order the Yotpo module to work correctly');	
 
@@ -96,20 +96,25 @@ class Yotpo extends Module
 			!$this->registerHook('header')			|| !$this->registerHook('orderConfirmation')	|| !YotpoSnippetCache::createDB()) 
 			return false;
 
+		if(version_compare(_PS_VERSION_, '1.5') >= 0 && (!$this->registerHook('yotpoProductAverageScore') ||
+		   !$this->registerHook('yotpoProductReviewCount'))) {
+		   		return false;
+		   }
 		/* Default language: English; Default widget location: Product page Footer; Default widget tab name: "Reviews" 
 		 * Default bottom line location: product page left column Default bottom line enabled : true*/	
 		
-		Configuration::updateValue('yotpo_language', 'en', false);
-		Configuration::updateValue('yotpo_widget_location', 'footer', false);
-		Configuration::updateValue('yotpo_widget_tab_name', 'Reviews', false);
-		Configuration::updateValue('yotpo_bottom_line_enabled', 1, false);
-		Configuration::updateValue('yotpo_bottom_line_location', 'left_column', false);
-		Configuration::updateValue('yotpo_widget_language_code', 'en', false);
-		Configuration::updateValue('yotpo_language_as_site', 0, false);
-		Configuration::updateValue('yotpo_rich_snippets', 1, false);
+		Configuration::updateValue('yotpo_language', 'en');
+		Configuration::updateValue('yotpo_widget_location', 'footer');
+		Configuration::updateValue('yotpo_widget_tab_name', 'Reviews');
+		Configuration::updateValue('yotpo_bottom_line_enabled', 1);
+		Configuration::updateValue('yotpo_bottom_line_location', 'left_column');
+		Configuration::updateValue('yotpo_widget_language_code', 'en');
+		Configuration::updateValue('yotpo_language_as_site', 0);
+		Configuration::updateValue('yotpo_rich_snippets', 1);
 		
-		Configuration::updateValue('yotpo_rich_snippet_cache_created', 1, true);
-		
+		Configuration::updateValue('yotpo_rich_snippet_cache_created', 1);
+		Configuration::updateValue('yotpo_db_version', $this->db_version);
+
 		Configuration::updateValue('yotpo_map_status', serialize($this->getAcceptedMapStatuses()), false);
 		return true;
 	}
@@ -152,13 +157,12 @@ class Yotpo extends Module
 		$app_key = Configuration::get('yotpo_app_key');
 		if(isset($app_key) && !empty($app_key)) {
 			if ($this->parseProductId() != null && Configuration::get('yotpo_widget_location') == 'tab') {
-				if (version_compare(_PS_VERSION_, '1.6') >= 0) {
-					return '<h3 class="page-product-heading"><a href="#idTab-yotpo">'.Configuration::get('yotpo_widget_tab_name').'</a></h3>';	
-				}
-				return '<li><a href="#idTab-yotpo">'.Configuration::get('yotpo_widget_tab_name').'</a></li>';
+				$smarty = $this->context->smarty;
+				$smarty->assign(array('yotpoVersionPost16' => version_compare(_PS_VERSION_, '1.6') >= 0, 
+					 				  'yotpoWidgetTabName' => Configuration::get('yotpo_widget_tab_name')));
+				return $this->display(__FILE__, 'views/templates/front/productTab.tpl');
 			}		
 		}
-		return null;
 	}
 
 	public function hookProductTabContent()
@@ -166,8 +170,13 @@ class Yotpo extends Module
 		$app_key = Configuration::get('yotpo_app_key');
 		if(isset($app_key) && !empty($app_key)) {
 			$product = $this->getPageProduct(null);
-			if ($product != null && Configuration::get('yotpo_widget_location') == 'tab')
-				return '<div id="idTab-yotpo">'.$this->showWidget($product).'</div>';
+			if ($product != null && Configuration::get('yotpo_widget_location') == 'tab'){
+				$this->assignProductVars($product);
+				$smarty = $this->context->smarty;
+				$smarty->assign('yotpoContentTplPath',dirname(__FILE__).'/views/templates/front/widgetDiv2.tpl');				
+				return $this->display(__FILE__, 'views/templates/front/productTabContent.tpl');	
+			}
+				
 		}
 	}
 
@@ -206,6 +215,22 @@ class Yotpo extends Module
 		}
 	}
 
+	public function hookyotpoProductAverageScore($params = array()) {
+		$rich_snippet_data = $this->getRichSnippet($params['product_id']);
+		if(is_array($rich_snippet_data) && array_key_exists( 'reviews_average',$rich_snippet_data)){
+			return $rich_snippet_data['reviews_average'];
+		}
+		return 0;
+	}
+	
+	public function hookyotpoProductReviewCount($params = array()) {
+		$rich_snippet_data = $this->getRichSnippet($params['product_id']);
+		if(is_array($rich_snippet_data) && array_key_exists( 'reviews_count',$rich_snippet_data)){
+			return $rich_snippet_data['reviews_count'];
+		}
+		return 0;
+	}
+	
 	public function uninstall()
 	{
 		Configuration::deleteByName('yotpo_app_key');
@@ -218,6 +243,7 @@ class Yotpo extends Module
     	Configuration::deleteByName('yotpo_rich_snippets');
     	Configuration::deleteByName('yotpo_rich_snippet_cache_created');
     	Configuration::deleteByName('yotpo_map_status');
+    	Configuration::deleteByName('yotpo_db_version');    	
     	YotpoSnippetCache::dropDB();    	
 		return parent::uninstall();
 	}
@@ -309,13 +335,7 @@ class Yotpo extends Module
 	}
 
 	private function showWidget($product)
-	{
-		$rich_snippets = '';
-		if(Configuration::get('yotpo_rich_snippets') == true) {
-			$rich_snippets .= $this->getRichSnippet($this->parseProductId());
-		}
-		$smarty = $this->context->smarty;			
-		$smarty->assign('richSnippetsCode', $rich_snippets);		
+	{		
 		$this->assignProductVars($product);
 	    return $this->display(__FILE__, 'views/templates/front/widgetDiv2.tpl');
 		
@@ -537,10 +557,20 @@ class Yotpo extends Module
 
 	private function displaySettingsForm()
 	{
-		if(!Configuration::get('yotpo_rich_snippet_cache_created')) {
-			$created = YotpoSnippetCache::createDB();
-			Configuration::updateValue('yotpo_rich_snippet_cache_created', 1, $created);
+		$db_version = Configuration::get('yotpo_db_version');		
+		if(is_bool($db_version) && !$db_version) {
+			if(!Configuration::get('yotpo_rich_snippet_cache_created')) {
+				YotpoSnippetCache::createDB();					
+				Configuration::updateValue('yotpo_rich_snippet_cache_created', 1);
+			}
+			else {
+				$this->registerHook('yotpoProductAvarageScore');
+				$this->registerHook('yotpoProductReviewCount');
+				YotpoSnippetCache::updateDB();
+				Configuration::updateValue('yotpo_db_version', $this->db_version);
+			}						
 		}
+
 		$smarty = $this->context->smarty;
 		$all_statuses = OrderState::getOrderStates($this->getLanguageId());
 		
@@ -738,19 +768,20 @@ class Yotpo extends Module
 	}
 	
 	private function getRichSnippet($product_id) {
-		$result = '';		
+		$result = null;		
 		if (Configuration::get('yotpo_app_key') != '' && Configuration::get('yotpo_oauth_token') != '' && is_int($product_id)) {
 			try {
 				$result = YotpoSnippetCache::getRichSnippet($product_id);
 				$should_update_row = is_array($result) && !YotpoSnippetCache::isValidCache($result); 			
 				if($result == false || $should_update_row) {			
-					$result = '';
+					$result = array();
 					$expiration_time = null;
 					$request_result = $this->httpClient()->makeRichSnippetRequest(Configuration::get('yotpo_app_key'), $product_id);
 					if($request_result['status_code'] == 200) {
 						if ($request_result['json'] == true) {
-							$result .= $request_result['response']['rich_snippet']['html_code'];
-							$expiration_time = $request_result['response']['rich_snippet']['ttl'];
+							$result['ttl'] = $request_result['response']['rich_snippet']['ttl'];
+							$result['reviews_average'] = $request_result['response']['rich_snippet']['reviews_average'];
+							$result['reviews_count'] = $request_result['response']['rich_snippet']['reviews_count']; 
 						}
 						else 
 						{
@@ -764,19 +795,16 @@ class Yotpo extends Module
 							$expiration_time = $matches[1];						 
 							unset($matches);
 						}	
-						if(Tools::strlen($result) > 0 && Tools::strlen($expiration_time) > 0 && is_numeric($expiration_time)) {
+						if(isset($result['ttl']) && is_numeric($result['ttl']) && isset($result['reviews_average']) && isset($result['reviews_count'])) {
 							if($should_update_row) {
-								YotpoSnippetCache::updateCahce($product_id, $result, $expiration_time);
+								YotpoSnippetCache::updateCahce($product_id, $result);
 							}
 							else {
-								YotpoSnippetCache::addRichSnippetToCahce($product_id, $result, $expiration_time);	
+								YotpoSnippetCache::addRichSnippetToCahce($product_id, $result);	
 							}
 								
 						}
 					}
-				}
-				elseif (is_array($result) && !$should_update_row) {
-					$result = $result['rich_snippet_code'];
 				}
 			}
 			catch (Exception $e) {
